# py-ntcmg

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
pyntcm/_c_ext/src/: ntcmg.cpp  ntcmg.h
